# bind9

./: .clang-format  .gitattributes  .gitchangelog.rc  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CONTRIBUTING.md  Makefile.am  Makefile.top  README.md  SECURITY.md  bind.keys  clang-lto.ini  configure.ac  gcc-lto.ini  gcovr.cfg  meson.build  meson.format  meson.options  meson_options.txt
.reuse/: dep5
ci/: baseline-branch-uri.jq  clang-bookworm.ini  clang.ini  common.ini  openssl3.ini  respdiff.ini  sanitizer-default-check.py  tumbleweed.ini
cocci/: dns_rdata_tostruct.spatch  isc_attr_unused.spatch
contrib/mayo/: libmayo_1.so.1
contrib/scripts/: qp-usdt.stp
contrib/sqisign/: libsqisign_lvl1.so.2
doc/: meson.build
doc/arm/: build.inc.rst  changelog.rst  conf.py  logging-categories.inc.rst  meson.build  platforms.inc.rst  platforms.rst  reference.rst
doc/arm/_ext/: mergegrammar.py  rndcconf.py
doc/dev/: cfgmgr.md  dev.md  rdata.md  style.md  usdt.md
doc/ext/: configblock.py
doc/man/: Makefile.am  meson.build
doc/misc/: cfg_test.c  meson.build  mirror.zoneopt  options  primary.zoneopt  secondary.zoneopt  stub.zoneopt
doc/notes/: notes-9.21.12.rst
fuzz/: .gitignore  Makefile.am  dns_master_load.c  dns_message_checksig.c  dns_qp.c  dns_qpkey_name.c  dns_qpkey_nametype.c  dns_rdata_fromtext.c  dns_rdata_fromwire_text.c  meson.build
fuzz/dns_master_load.in/: generate-too-many.db
lib/: meson.build
lib/dns/: Makefile.am  acl.c  adb.c  antrag_link.c  badcache.c  cache.c  callbacks.c  catz.c  cfgmgr-lmdb.c  cfgmgr.c  cfgmgr_p.h  client.c  compress.c  db.c  db_p.h  dbiterator.c  diff.c  dispatch.c  dlz.c  dns64.c  dnsrps.c  dnssec.c  ds.c  dst_api.c  dst_internal.h  dst_openssl.h  dst_parse.c  dst_parse.h  dyndb.c  falcon_link.c  forward.c  gen.c  gssapi_link.c  gssapictx.c  hawk_link.c  hmac_link.c  hooks.c  journal.c  kasp.c  key.c  (+70 more)
lib/dns/antrag/: TODO
lib/dns/falcon-512/: randombytes.c
lib/dns/hawk/: hawk_config.h  hawk_vrfy.c
lib/dns/include/: meson.build
lib/dns/include/dns/: acl.h  adb.h  cache.h  cfgmgr.h  compress.h  db.h  dbiterator.h  diff.h  dispatch.h  dns64.h  dnssec.h  ds.h  dyndb.h  hooks.h  kasp.h  keydata.h  keymgr.h  keyvalues.h  lhashmap.h  lib.h  masterdump.h  mayo.h  meson.build  message.h  mtl.h  name.h  ncache.h  notify.h  nsec.h  nsec3.h  peer.h  psl.h  qp.h  rdata.h  rdataset.h  rdataslab.h  rdatavec.h  resolver.h  rootns.h  rpz.h  (+12 more)
lib/isc/: Makefile.am  backtrace.c  cfgmgr.c  counter.c  crypto.c  file.c  hmac.c  httpd.c  jemalloc_shim.h  lex.c  lib.c  log.c  loop.c  loop_p.h  md.c  mem.c  meson.build  mutex.c  net.c  netaddr.c  openssl_shim.c  openssl_shim.h  os.c  picohttpparser.c  proxy2.c  random.c  result.c  skiplist.c  stats.c  statsmulti.c  stdio.c  stdtime.c  symtab.c  thread.c  time.c  tls.c  tw.c  urcu.c  uv.c  xml.c
lib/isc/crypto/: meson.build  ossl1.c  ossl3.c  ossl_common.c
lib/isc/include/isc/: ascii.h  assertions.h  attributes.h  buffer.h  cfgmgr.h  counter.h  crypto.h  endian.h  fxhash.h  hmac.h  httpd.h  lib.h  lmdb.h  log.h  loop.h  md.h  mem.h  meson.build  mutex.h  net.h  netmgr.h  ngtcp2_crypto.h  ngtcp2_utils.h  os.h  overflow.h  pause.h  queue.h  quic.h  refcount.h  result.h  rwlock.h  sieve.h  skiplist.h  spinlock.h  statsmulti.h  stdio.h  thread.h  time.h  tls.h  tree.h  (+4 more)
lib/isc/netmgr/: http.c  meson.build  netmgr-int.h  netmgr.c  proxyudp.c  socket.c  tcp.c  tlsstream.c  udp.c
lib/isc/openldap-lmdb/: lmdb.h  mdb.c  midl.c  midl.h
lib/isc/ossl_wrap/: ossl3.c
lib/isc/quic/: meson.build  ngtcp2_crypto.c  ngtcp2_utils.c  quic-int.h  quic_cid.c  quic_cid_map.c  quic_crypto.c  quic_crypto.h  quic_interface_compat.c  quic_interface_native.c  quic_route_pkt.c  quic_session.c  quic_session.h  quic_session_manager.c  quic_token_cache.c  tls_keylog_parser.c  tls_quic.c
lib/isc/tests/: random_test.c
lib/isccc/: cc.c  ccmsg.c  meson.build
lib/isccc/include/isccc/: meson.build
lib/isccfg/: Makefile.am  cfgmgr.c  check.c  kaspconf.c  lib.c  meson.build  namedconf.c  parser.c  parser_p.h
lib/isccfg/include/isccfg/: cfg.h  cfgmgr.h  grammar.h  lib.h  meson.build
lib/ns/: client.c  interfacemgr.c  meson.build  notify.c  probes-ns.d  query.c  server.c  stats.c  update.c  xfrout.c
lib/ns/include/ns/: client.h  meson.build  query.h  server.h  stats.h  types.h
perflab/: arch-native.ini  arch-v2.ini  arch-v3.ini
tests/: meson.build
tests/bench/: ascii.c  compress.c  load-names.c  meson.build  qp-dump.c  qplookups.c  qpmulti.c
tests/dns/: .gitignore  Makefile.am  badcache_test.c  cfgmgr_test.c  db_test.c  dbiterator_test.c  dbversion_test.c  dbzone_test.c  diff_test.c  dispatch_test.c  dnstap_test.c  dst_test.c  geoip_test.c  keytable_test.c  lhashmap_test.c  master_test.c  meson.build  name_test.c  name_test.py  name_test_pythonbuild.py  nsec3_test.c  nsec3param_test.c  plugin_test.c  private_test.c  qp_test.c  qp_test.py  qp_test_pythonbuild.py  qpdb_test.c  qpmulti_test.c  qpnametype_test.c  qpzone_test.c  rdata_test.c  rdatasetstats_test.c  resolver_test.c  rsa_test.c  run.sh  sigs_test.c  skr_test.c  tsig_test.c  update_test.c  (+4 more)
tests/dns/testdata/master/: meson.build
tests/dns/testdata/skr/: test.skr
tests/include/tests/: dns.h  isc.h  ns.h
tests/irs/: meson.build
tests/isc/: Makefile.am  buffer_test.c  cfgmgr_test.c  counter_test.c  dnsstream_utils_test.c  doh_test.c  hmac_test.c  md_test.c  mem_test.c  meson.build  netmgr_common.c  ngtcp2_integration_test.c  proxyheader_test.c  quic_session_test.c  quic_sm_test.c  quic_tls_test.c  skiplist_test.c  stats_test.c  symtab_test.c  time_test.c  timer_test.c  tw_test.c  udp_test.c  uv_wrap.h
tests/isccfg/: Makefile.am  cfgmgr_test.c  duration_test.c  grammar_test.c  meson.build  parser_test.c
tests/libtest/: dns.c  isc.c  ns.c  qp.c
tests/ns/: meson.build  netmgr_wrap.c  plugin_test.c  query_test.c
util/: generate-stress-test-configs.py  meson-dist-package.sh  meson-get-named-flags.py  meson-glob.sh  meson-system-test-init.sh  meson.build  run-clang-tidy  run-clang-tidy.patch  run-clang-tidy.sh  system-test-scope.sh
(+184 files in other folders)
