isc_srcset.add(when: 'HAVE_LIBNGHTTP2', if_true: [files('http.c'), nghttp2_dep])

isc_srcset.add(
    files(
        'netmgr.c',
        'proxystream.c',
        'proxyudp.c',
        'socket.c',
        'streamdns.c',
        'tcp.c',
        'timer.c',
        'tlsstream.c',
        'udp.c',
    ),
)
