dns_gen_headers += [
    custom_target(
        'dns-header-enumtype',
        output: 'enumtype.h',
        depend_files: dns_header_depfiles,
        capture: true,
        install: true,
        install_dir: get_option('includedir') / 'dns',
        command: [dns_header_gen, '-s', '@CURRENT_SOURCE_DIR@' / '..' / '..', '-t'],
    ),

    custom_target(
        'dns-header-enumclass',
        output: 'enumclass.h',
        depend_files: dns_header_depfiles,
        capture: true,
        install: true,
        install_dir: get_option('includedir') / 'dns',
        command: [dns_header_gen, '-s', '@CURRENT_SOURCE_DIR@' / '..' / '..', '-c'],
    ),

    custom_target(
        'dns-header-rdatastruct',
        output: 'rdatastruct.h',
        depend_files: dns_header_depfiles,
        capture: true,
        install: true,
        install_dir: get_option('includedir') / 'dns',
        command: [
            dns_header_gen,
            '-s', '@CURRENT_SOURCE_DIR@' / '..' / '..',
            '-i',
            '-P', '@CURRENT_SOURCE_DIR@' / '..' / '..' / 'rdata' / 'rdatastructpre.h',
            '-S', '@CURRENT_SOURCE_DIR@' / '..' / '..' / 'rdata' / 'rdatastructsuf.h',
        ],
    ),
]

install_headers(
    files(
        'acl.h',
        'adb.h',
        'badcache.h',
        'bit.h',
        'byaddr.h',
        'cache.h',
        'callbacks.h',
        'catz.h',
        'cert.h',
        'client.h',
        'clientinfo.h',
        'compress.h',
        'db.h',
        'dbiterator.h',
        'diff.h',
        'dispatch.h',
        'dlz.h',
        'dlz_dlopen.h',
        'dns64.h',
        'dnssec.h',
        'dnstap.h',
        'ds.h',
        'dsdigest.h',
        'dyndb.h',
        'ecs.h',
        'edns.h',
        'fixedname.h',
        'forward.h',
        'geoip.h',
        'ipkeylist.h',
        'iptable.h',
        'journal.h',
        'kasp.h',
        'keydata.h',
        'keyflags.h',
        'keymgr.h',
        'keystore.h',
        'keytable.h',
        'keyvalues.h',
        'master.h',
        'masterdump.h',
        'message.h',
        'name.h',
        'nametree.h',
        'ncache.h',
        'nsec.h',
        'nsec3.h',
        'nta.h',
        'opcode.h',
        'order.h',
        'peer.h',
        'private.h',
        'qp.h',
        'rcode.h',
        'rdata.h',
        'rdataclass.h',
        'rdatalist.h',
        'rdataset.h',
        'rdatasetiter.h',
        'rdataslab.h',
        'rdatatype.h',
        'remote.h',
        'request.h',
        'resolver.h',
        'result.h',
        'rootns.h',
        'rpz.h',
        'rriterator.h',
        'rrl.h',
        'sdlz.h',
        'secalg.h',
        'secproto.h',
        'skr.h',
        'soa.h',
        'ssu.h',
        'stats.h',
        'time.h',
        'tkey.h',
        'trace.h',
        'transport.h',
        'tsig.h',
        'ttl.h',
        'types.h',
        'update.h',
        'validator.h',
        'view.h',
        'xfrin.h',
        'zone.h',
        'zonekey.h',
        'zoneverify.h',
        'zt.h',
    ),
    subdir: 'dns',
)
